--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,13 +1,13 @@
 name: lint
 
-# yamllint disable rule:truthy
-on:
-  pull_request:
-    branches: ['*']
-  push:
-    branches: ['*']
-    tags: ['*']
-# yamllint enable rule:truthy
+# # yamllint disable rule:truthy
+# on:
+#   pull_request:
+#     branches: ['*']
+#   push:
+#     branches: ['*']
+#     tags: ['*']
+# # yamllint enable rule:truthy
 
 jobs:
   lint:
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
